Created toggle in settings which allows users to enabe/disable the grouped view

--- a/public/language/en-US/user.json
+++ b/public/language/en-US/user.json
@@ -153,6 +153,7 @@
     "update-url-with-post-index": "Update url with post index while browsing topics",
     "scroll-to-my-post": "After posting a reply, show the new post",
     "follow-topics-you-reply-to": "Watch topics that you reply to",
+    "group-topics-by-date": "Group topics by date in categories",
     "follow-topics-you-create": "Watch topics you create",
     "grouptitle": "Group Title",
     "group-order-help": "Select a group and use the arrows to order titles",
