feat(composer): add post anonymously toggle to post creation

--- a/public/language/en-GB/topic.json
+++ b/public/language/en-GB/topic.json
@@ -210,6 +210,7 @@
 	"composer.thumb-file-label": "Or upload a file",
 	"composer.thumb-remove": "Clear fields",
 	"composer.drag-and-drop-images": "Drag and Drop Images Here",
+	"composer.post-anonymously": "Post anonymously",
 
 	"more-users-and-guests": "%1 more user(s) and %2 guest(s)",
 	"more-users": "%1 more user(s)",
